# HCA-AI-Orchestration

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RESTRUCTURING.md  WORKSPACE_MANAGEMENT.md  docker-compose.yml  plan.md  pyproject.toml  setup.sh  test_ollama.py
.github/workflows/: ci.yml  opencode-review.yml  opencode.yml  release.yml
config/: README.md
data/: hca.db-shm  hca.db-wal
docs/: ARCHITECTURE.md  PROMPT_COOKBOOK.md  README.md  USER_GUIDE.md
scripts/: reset_workspace.sh  setup_ollama_models.sh
src/: __init__.py  main.py
src/agents/: base_agent.py  coder_agent.py  critic_agent.py  pm_agent.py  research_agent.py  spec_agent.py
src/api/: app.py
src/api/routes/: agents.py  projects.py  tasks.py  websocket.py
src/api/static/: index.html
src/api/static/css/: styles.css
src/api/static/js/: app.js
src/core/: config.py  database.py  logger.py  message_bus.py  models.py  ollama_client.py
src/hca/: main.py
src/hca/agents/: __init__.py  base_agent.py  coder_agent.py  critic_agent.py  pm_agent.py  research_agent.py  spec_agent.py
src/hca/api/: __init__.py  app.py
src/hca/api/routes/: agents.py  dead_letter.py  hitl.py  projects.py  tasks.py  websocket.py
src/hca/api/static/css/: styles.css
src/hca/api/static/js/: app.js
src/hca/core/: __init__.py  config.py  database.py  logger.py  message_bus.py  metrics.py  models.py  ollama_client.py  tools.py
src/hca/orchestrator/: guardrails.py  pipeline.py  sandbox.py  task_manager.py  workspace_manager.py
src/hca/prompts/: coder.txt  critic.txt  pm.txt  research.txt  spec.txt
src/orchestrator/: __init__.py  guardrails.py  pipeline.py  task_manager.py
src/prompts/: coder.txt  critic.txt  pm.txt  research.txt  spec.txt
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_database.py  test_integration.py  test_message_bus.py  test_ollama_client.py  test_orchestration.py  test_phase2_agents.py  test_phase3_orchestration.py  test_pipeline.py
tests/integration/: test_integration.py  test_orchestration.py  test_pipeline.py
tests/unit/: conftest.py  test_agents.py  test_api.py  test_config.py  test_database.py  test_guardrails.py  test_logger.py  test_message_bus.py  test_metrics.py  test_ollama_client.py  test_pipeline.py  test_sandbox.py  test_tools.py  test_websocket.py  test_workspace_manager.py
