[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hca-orchestration"
version = "0.1.0"
description = "Hybrid Cognitive Architecture - An autonomous AI development team powered by Ollama"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "redis[hiredis]>=5.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hca"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN001", "ANN003", "ANN201", "ANN202", "ANN204", "ANN401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/hca"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = false
ignore_missing_imports = true
warn_unused_ignores = false
disable_error_code = [
    "var-annotated",    # Pre-existing: ollama_client.py trimmed_conversation
    "no-any-return",    # Pre-existing: 8 return-type issues across the codebase
    "misc",             # Pre-existing: redis-py await type incompatibilities
    "arg-type",         # Pre-existing: redis-py stub compat + agent task_manager type
    "str-unpack",       # Pre-existing: message_bus.py redis xreadgroup loose typing
    "union-attr",       # Pre-existing: message_bus.py redis return type unions
    "index",            # Pre-existing: message_bus.py redis dict field indexing
]
